--- a/source/Vulcan.UI/App.xaml
+++ b/source/Vulcan.UI/App.xaml
@@ -1,8 +1,3 @@
-﻿<Application x:Class="Vulcan.UI.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+<Application x:Class="Vulcan.UI.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" StartupUri="MainWindow.xaml">
+	<Application.Resources></Application.Resources>
 </Application>
