--- a/source/Vulcan.UI/MainWindow.xaml
+++ b/source/Vulcan.UI/MainWindow.xaml
@@ -1,8 +1,3 @@
-﻿<Window x:Class="Vulcan.UI.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
+<Window x:Class="Vulcan.UI.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Title="MainWindow" Height="350" Width="525">
+	<Grid></Grid>
 </Window>
